Version 1.0.0
  Bugfixes:
  - Fix uninitialized value that caused intermittent server crashes.
    Per report from Bruno Voigt.

Version 0.9.3 (beta), released 2012-02-07
  Enhancements:
  - Add support for PostgreSQL data type "uuid".

  Bugfixes:
  - After an error message, calls to the foreign server result in this error:
      error connecting to Oracle: OCITransStart failed to start a transaction
      ORA-01453: SET TRANSACTION must be first statement of transaction
    The problem is that the previous transaction was not closed.
    This used to go unnoticed, the problem now becomes manifest because we
    explicitly start a serializable transaction.
    Per reports from Keith Fiske and Bruno Voigt.

Version 0.9.2 (beta), released 2011-12-30
  Bugfixes:
  - Fix handling of Oracle BFILE columns.  This was totally broken; attempts
    to select such columns resulted in the error message
    'ORA-00932: inconsistent datatypes: expected %s got %s'.
    Bug report and patch by Dominique Legendre.
  - Use a serializable transaction in Oracle to make sure that consistent
    data are retrieved during a rescan.

Version 0.9.1 (beta), released 2011-09-14
  Bugfixes:
  - Fix incorrect use of an automatic variable for binding timestamp parameters
    in Oracle.
  - Remove unnecessary lvalue casts.
    These violate the C standard and cause errors on gcc 4.
    Per report from Dominique Legendre.
  - Fix lack of support for dropped columns in foreign table.
    oracle_fdw incorrectly assumed that the n-th PostgreSQL column corresponds
    to the n-th Oracle column.  This leads to confusion in the presence of
    dropped columns, which retain an entry in pg_attribute.
    Per report from Dominique Legendre.
  - Fix typo that caused wrong and negative sizes being assumed for longer
    Oracle columns.  This led to palloc() errors and Oracle fetch errors.
    Per report from Dominique Legendre.

Version 0.9 (beta), released 2011-08-25
  - initial release