@@ -2,6 +2,8 @@ Version 1.0.0
   Bugfixes:
   - Fix uninitialized value that caused intermittent server crashes.
     Per report from Bruno Voigt.
+  - Fix bug introduced in 0.9.3 that prevented Oracle errors from being
+    reported as DETAIL message.
 
 Version 0.9.3 (beta), released 2012-02-07
   Enhancements:
